2015-04-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Save the settings of the global
	case-sens, direction, and regexp flags, and restore them on exit.
	And do this not in do_filesearch() but in findnextfile(), so that
	it will also work for do_fileresearch().

2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
	two identical functions into one: need_screen_update().
	* src/prompt.c (need_statusbar_horizontal_update): Rename function
	to need_statusbar_update() as there is no vertical counterpart.
	* src/search.c (do_search, do_research): Delete redundant reprises
	of a regex search: finding an occurrence only at the very starting
	point of the search necessarily means it is the only occurrence.

2015-04-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c, src/nano.c, doc/man/nanorc.5, doc/texinfo/nano.texi:
	Make the descriptions of the multibuffer feature more accurate.
	* src/winio.c (display_string): Make sure an invalid starting byte
	of a multibyte sequence is properly terminated, so that it doesn't
	pick up lingering bytes of any previous content.  This prevents the
	displaying of ghosts -- characters that aren't really there -- when a
	file contains valid ánd invalid UTF-8 sequences.  For an example see:
	https://lists.gnu.org/archive/html/nano-devel/2015-04/msg00052.html.
	Also make two comments more accurate: an invalid multibyte sequence
	will never be categorized as a control character or anything else.

2015-04-18  Mark Oteiza  <mvoteiza@udel.edu>
	* doc/syntax/{python,ruby,sh,tex}.nanorc: Add a linter definition.
	* doc/syntax/elisp.nanorc: New file; syntax highlighting for Elisp.
	* doc/syntax/guile.nanorc: New file; syntax highlighting for Guile.

2015-04-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_alt_speller, do_linter, do_formatter): Distinguish