@@ -3,6 +3,8 @@
 	case-sens, direction, and regexp flags, and restore them on exit.
 	And do this not in do_filesearch() but in findnextfile(), so that
 	it will also work for do_fileresearch().
+	* src/text.c (do_int_spell_fix): Save and restore the global flags
+	in the same short and quick way as above.
 
 2015-04-20  Benno Schulenberg  <bensberg@justemail.net>
 	* src/winio.c (need_horizontal_update, need_vertical_update): Fuse
